# echostats

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/echostats/: __init__.py  __main__.py  _abc.py  app.py  models.py  streamer.py
src/echostats/consumers/: __init__.py  _base.py  debugger.py  disc.py  player.py  recorder.py
src/echostats/graphers/: disc.py
