[tool.poetry]
name = "echostats"
version = "0.1.0"
description = "To calculate stats about EchoArena game"
authors = ["Laser Racer <cat@heaven.ist>"]
license = "GPLv3"
packages = [
    { include = "echostats", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
click = "^8.1.3"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"

[tool.poetry.scripts]
echostats = "echostats:__main__"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
